# sck-rs

./: Cargo.toml  README.md
examples/: capture_monitor.rs  capture_window.rs  list_windows.rs
src/: capture.rs  error.rs  lib.rs  monitor.rs  window.rs
